@@ -3,7 +3,7 @@ include_HEADERS	=	cspublic.h ctpublic.h sybdb.h sybfront.h          \
 			ctlib.h sqldb.h sqlfront.h                        \
 			tds.h tdsver.h tdsconvert.h tds_configs.h tdsodbc.h
 
-EXTRA_DIST     =    tds_configs.h.in
+EXTRA_DIST     =    tds_configs.h.in tds_configs.h
 
 all-local: tds_configs.h 
 
